k8s/app-world-with-flagger.yaml
--- # ---
##################################################################################################
# World App Flagger
##################################################################################################
# apiVersion: v1
# kind: Service
# metadata:
#   name: world-app-svc-flagger
#   labels:
#     service: world-app-svc-flagger
# spec:
#   ports:
#     - port: 8080
#       name: http
#   selector:
#     app: world-app-flagger
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-app-flagger
  labels:
    app: world-app-flagger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: world-app-flagger
  template:
    metadata:
      labels:
        app: world-app-flagger
    spec:
      containers:
        - name: world-app-flagger
          image: docker.io/tentativafc/world-app:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
