k8s/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-demo
  labels:
    web: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.19.10
      ports:
        - containerPort: 80
