k8s/app-world-v2.yaml
##################################################################################################
# World App
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: world-app-svc-v2
  labels:
    service: world-app-svc
    version: v2
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: world-app
    version: v2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-app-v2
  labels:
    app: world-app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: world-app
      version: v2
  template:
    metadata:
      labels:
        app: world-app
        version: v2
    spec:
      containers:
        - name: world-app
          image: docker.io/tentativafc/world-app:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
