k8s/hello-app-service.yaml
##################################################################################################
# Hello App
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
  labels:    
    service: hello-app-svc
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: hello-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v1
  labels:
    app: hello-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
      version: v1
  template:
    metadata:
      labels:
        app: hello-app
        version: v1
    spec:
      containers:
        - name: hello-app
          image: docker.io/YOUR_DOCKER_HUB_USER/hello-app:1.0.0-snapshot
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
