k8s/world-app.yaml
##################################################################################################
# Hello App
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: world-app-svc
  labels:    
    service: world-app-svc
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: world-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-app-v1
  labels:
    app: world-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: world-app
      version: v1
  template:
    metadata:
      labels:
        app: world-app
        version: v1
    spec:
      containers:
        - name: world-app
          image: docker.io/tentativafc/world-app:1.0.0-snapshot
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
