k8s/podinfo-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo-vs
spec:
  hosts:
  - "*"
  gateways:
  - demo-gateway
  http:
  - match:
    - uri:
        prefix: /podinfo
    rewrite:
      uri: /
    route:
    - destination:
        host: podinfo.test.svc.cluster.local
        port:
          number: 9898
