k8s/virtual-service-blue-green.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: world-vs
spec:
  hosts:
    - "*"
  gateways:
    - demo-gateway
  http:
    - match:
        - uri:
            prefix: /world/
      route:
        - destination:
            host: world-app-svc
            port:
              number: 8080
            subset: v1
          weight: 100
        # Direcionará 100 do tráfego para a v2
        - destination:
            host: world-app-svc
            port:
              number: 8080
            subset: v2
          weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: world-dr
spec:
  host: world-app-svc
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
