k8s/world-with-flagger-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: world-flagger-vs
spec:
  hosts:
  - "*"
  gateways:
  - demo-gateway
  http:
  - match:
    - uri:
        prefix: /world-flagger/
    rewrite:
      uri: /
    route:
    - destination:
        # host: world-app-flagger
        host: world-app-flagger.default.svc.cluster.local
        port:
          number: 8080
